<resources>
    <string name="app_name">Fixxit</string>
    <string name="data_access_activity_name">Fix It Data</string>
    <string name="map_areas">Map Areas</string>
    <string name="error_unknown">Unknown error, please try again.</string>
    <string name="error_default_display_msg">We apologize for any inconveniences but an unexpected error has occurred :(</string>
    <string name="error_no_network_msg">Please check your internet connection and try again!</string>
    <string name="error_server_unavailable">Server is currently under maintenance, please try again later.</string>
    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet_browser">Could not find an internet browser application on device.</string>
    <string name="report_error">Report Error</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="mobile_networks">Mobile Networks</string>
    <string name="continue_">Continue</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_exit_without_login">You will not be able to continue your order without completing sign in or registration, are you sure you want to go back?</string>
    <string name="empty_list">Nothing to show</string>
    <string name="closed_today">Closed Today</string>
    <string name="close">Close</string>
    <string name="verification_message_body">Your verification code for Fix It is: %1$d</string>
    <string name="invalid_telephone">Telephone Number is invalid.</string>
    <string name="invalid_mobile_number">Invalid Mobile number, make sure this is not a landline number!</string>
    <string name="telephone_unreachable">Telephone number is unreachable.</string>
    <string name="from_number_blacklisted">You have black listed us, please SMS \"START\" to %1$s and try again</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="complete">Complete</string>
    <string name="copied_format">Copied %1$s</string>
    <string name="verify">Verify</string>
    <string name="i_need_a">I need a…</string>
    <string name="search_professions">Search Professions</string>
    <string name="show_all_professions">Show All Professions</string>
    <string name="location">Location…</string>
    <string name="at_location">At Location</string>
    <string name="search_addresses">Search Addresses</string>
    <string name="show_map">Show Map</string>
    <string name="review_title_hint">Summary in a few words.</string>
    <string name="review_content_hint">How was your experience with the tradesman?</string>
    <string name="empty_profession">Please pick a profession</string>
    <string name="empty_address">Please pick an address</string>
    <string name="invalid_profession">Invalid profession, must select from predefined professions.</string>
    <string name="invalid_address">Invalid address, must pick a street address.</string>
    <string name="no_tradesmen_selected">Please select a tradesman.</string>
    <string name="selected_x_out_of_tradesmen">Selected %1$d out of %2$d tradesmen.</string>
    <string name="no_tradesmen_results">Could not find any tradesmen for your location.</string>
    <string name="no_tradesman_reviews">There are currently no reviews for this tradesman.</string>
    <string name="format_tradesmen_selection_limit">Cannot select more then %1$d tradesmen.</string>
    <string name="format_review_count">%1$d Reviews</string>
    <string name="tradesman_selection_limit_passed">Cannot select more then %1$d tradesmen</string>
    <string name="select_tradesman">Select Tradesman</string>
    <string name="validating_address">Validating address…</string>
    <string name="starting_search">Starting search…</string>
    <string name="waiting_for_results">Waiting for search results…</string>
    <string name="rating">Rating</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_for_order">We need your help!\nWithout your reviews and experiences with the tradesmen we won\'t be able to keep providing you with top quality tradesmen, so in order to help out  please create an account with us and leave a review of the tradesman you have ordered!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="contact_selected_tradesmen">Contact selected tradesmen</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="login_failed_for">Could not login with %1$s, please try a different method.</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="error_empty_field">Cannot be left empty.</string>
    <string name="invalid_email">Email is invalid.</string>
    <string name="invalid_verification_code">Verification code is invalid.</string>
    <string name="verification">Verification</string>
    <string name="number_verification_desc">We need your telephone number so that we know what contact number to send to your requested tradesmen.</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_desc">You will shortly receive an SMS with a verification code, please enter the verification code below.</string>
    <string name="email_already_exists">Email already exists.</string>
    <string name="cannot_continue_without_login">Cannot continue without signing up.</string>
    <string name="reason">Reason</string>
    <string name="pick_a_reason">Pick a problem</string>
    <string name="cant_select_gt_x_reasons">Can\'t select more then %1$d reasons.</string>
    <string name="chosen_x_tradesmen">You have chosen %1$d tradesmen</string>
    <string name="error_google_login">Could\'nt login with google.</string>
    <string name="order_complete">Order Complete!</string>
    <string name="order_completed_text">
        Thank you for using Fixxit.\n
        One of your chosen professionals will contact you shortly.\n
        You can also call them from the menu located on the top left corner of our home page.\n
        Please remember to leave a review. It helps the community find quality tradesmen.
    </string>
    <string name="view_ordered_tradesmen">View Ordered Tradesmen</string>
    <string name="new_search">New Search</string>
    <string name="search">Search</string>
    <string name="exit_app">Exit Application</string>
    <string name="finished">Finished</string>
    <string name="later">Later</string>
    <string name="order_notification_title">Order Check-Up</string>
    <string name="order_notification_immediate_flow_message">Have you been contacted by any of the tradesmen you ordered?</string>
    <string name="order_notification_delayed_flow_message">Was yesterday\'s order completed?</string>
    <string name="arrived_to_fix_problem">Have any of the tradesmen arrived to fix your problem?</string>
    <string name="pick_tradesmen_who_contacted_you">Pick the tradesmen that have contacted you.</string>
    <string name="leave_review_on_contacted_tradesmen">Would you like to leave a review on any of the tradesmen that have contacted you?</string>
    <string name="who_fixed_the_problem">Which tradesman arrived to fix your problem?</string>
    <string name="like_to_start_a_new_search">Would you like to start a new search?</string>
    <string name="use_same_profession_and_location">Search for %1$s at location %2$s</string>
    <string name="has_the_job_been_complete_to_your_liking">Has the job been completed to your liking?</string>
    <string name="please_rate_us_on_play_store">Please rate us on Google Play store.</string>
    <string name="okay">Okay</string>
    <string name="not_now">Not now</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="review_content">Review Content</string>
    <string name="review_description">Review Description</string>
    <string name="review_title">Review Title</string>
    <string name="leave_review">Leave a review</string>
    <string name="format_rate_name">Rate %1$s</string>
    <string name="loading_reviews">Loading Reviews…</string>
    <string name="create_new_review">Create a new review</string>
    <string name="update_existing_review">Update existing review</string>
    <string name="checking_review_history">Checking review history</string>
    <string name="open">Open</string>
    <string name="ongoing_order">On-Going Order</string>
    <string name="format_ongoing_order">On-Going %1$s Order</string>
    <string name="order_history">Order History</string>
    <string name="view">View</string>
    <string name="format_ordered_x_tradesmen">Ordered %1$d tradesmen</string>
    <string name="format_at_x">At %1$s</string>
    <string name="no_orders_made_yet">You haven\'t made any orders yet!</string>
    <string name="contact_us_at">Contact us at: <b><i>%1$s</i></b></string>
    <string name="fixxit_contact_email">Fixxit contact email</string>
    <string name="fixxit_version">Fixxit version</string>
    <string name="inquiry_from_app_version">Inquiry from app version %1$s</string>
    <string name="find_email_intent_msg">Send email…</string>
    <string name="about">About</string>
    <string name="plural_answered_to_your_satisfaction">Have the tradesmen answered to your satisfaction?</string>
    <string name="singular_answered_to_your_satisfaction">Has the tradesman answered to your satisfaction?</string>
    <string name="view_order_history">View order history</string>
    <string name="leave_app">Leave application</string>
    <string name="what_would_you_like_to_do_next">What would you like to do next?</string>
    <string name="why_not_answered_to_satisfaction">Could you tell us why the tradesmen didn\'t answer to your satisfaction?</string>
    <string name="loading_order_history">Loading Order History</string>
    <string name="unavailable">Unavailable</string>
    <string name="login_for_order_history">Please login to view your order history.</string>
    <string name="comment">Send a comment in your order.</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading_format">Loading %1$s</string>
    <string name="agree_to">Agree to </string>
    <string name="must_agree_to">Must agree to </string>
    <string name="unsupported_address">Unsupported address</string>
    <plurals name="job_reasons_picked">
        <item quantity="zero">@string/pick_a_reason</item>
        <item quantity="one">Picked 1 problem</item>
        <item quantity="other">Picked %1$d problems</item>
    </plurals>
    <string name="tutorial_show_professions">Click here to pick a profession from a list.</string>
    <string name="tutorial_show_map">Click here to select your location on a map.</string>
    <string name="tutorial_search">Click here to search for tradesmen.</string>
    <string name="tutorial_search_results">Click a tradesman to view his profile and add him to your order.</string>
    <string name="tutorial_order_selected_tradesmen">Click here to order selected tradesmen.</string>
    <string name="tutorial_select_tradesman">Click here to select this tradesman.</string>
    <string name="tutorial_view_profile">Click a tradesman to view his profile.</string>
    <string name="tutorial_slide_for_tradesmen">If you ordered more then one tradesman then you can slide to the right to see them.</string>
</resources>