<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_appbar_search_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/bg_corner_nuts"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_item_spacing"
            android:text="@string/i_need_a"
            android:textSize="@dimen/large_text_size" />

        <com.fixit.core.ui.components.InstantAutoComplete
            android:id="@+id/actv_professions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_item_spacing"
            android:hint="@string/search_professions"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:theme="@style/EditTextTheme"
            app:cancelDrawable="@drawable/ic_close_dark"
            app:clearButtonMode="whileEditing" />

        <Button
            android:id="@+id/btn_show_professions"
            style="@style/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_list_white_24dp"
            android:paddingEnd="54dp"
            android:paddingStart="30dp"
            android:text="@string/show_all_professions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_item_spacing"
            android:text="@string/at_location"
            android:textSize="@dimen/large_text_size" />

        <com.fixit.core.ui.components.CancelableAutoCompleteTextView
            android:id="@+id/actv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_item_spacing"
            android:hint="@string/search_addresses"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="2"
            android:minLines="2"
            android:theme="@style/EditTextTheme"
            app:cancelDrawable="@drawable/ic_close_dark"
            app:clearButtonMode="whileEditing" />

        <Button
            android:id="@+id/btn_show_map"
            style="@style/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_activity_item_spacing"
            android:drawableStart="@drawable/ic_map_white_24dp"
            android:paddingEnd="54dp"
            android:paddingStart="30dp"
            android:text="@string/show_map" />

        <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_search_white_24dp"
            app:rippleColor="@android:color/white" />-->

    </LinearLayout>

    <com.fixit.core.ui.components.FloatingTextButton
        android:id="@+id/fab_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="18dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:buttonColor="@color/colorButton"
        app:buttonIcon="@drawable/ic_search_white_24dp"
        app:buttonText="@string/search"
        app:buttonTextColor="@android:color/white"
        app:layout_behavior="com.fixit.core.ui.behaviours.SnackbarBehavior" />

</android.support.design.widget.CoordinatorLayout>