<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:background="@drawable/bg_transparent_black">


    <TextView
        android:id="@+id/tv_title"
        style="@style/dark_bg_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/number_verification_item_spacing"
        android:text="@string/verification" />

    <TextView
        android:id="@+id/tv_hint"
        style="@style/dark_bg_content_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/number_verification_item_spacing"
        android:layout_weight="1"
        android:text="@string/number_verification_desc"
        android:textSize="@dimen/standard_text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/number_verification_item_spacing"
        android:layout_marginTop="@dimen/number_verification_item_spacing"
        android:textColorHint="@android:color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/number_verification_item_spacing"
        android:layout_marginTop="@dimen/number_verification_item_spacing"
        android:textColorHint="@android:color/white"
        android:visibility="gone">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/user_registration_field_spacing"
        android:text="@string/verify" />

</LinearLayout>