<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:background="@drawable/bg_transparent_black">

    <TextView
        android:id="@+id/tv_review_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/create_new_review"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_tradesman_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_status"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/iv_tradesman_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_tradesman_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_status"
        tools:layout_editor_absoluteX="100dp"
        tools:text="Bobs plumbing" />

    <TextView
        android:id="@+id/tv_label_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_tradesman_logo"
        tools:text="Rate Bobs plumbing" />

    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_rating"
        tools:layout_editor_absoluteX="72dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/review_title_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_rating">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_review_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusDown="@+id/et_review_content"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/review_content_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_title_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_review_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>